--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- plugins versions -->
+        <maven.compiler.version>3.11.0</maven.compiler.version>
+        <maven.dependency.version>3.6.0</maven.dependency.version>
+        <maven.jar.version>3.3.0</maven.jar.version>
+        <maven.surefire.version>3.1.2</maven.surefire.version>
+        <maven.resources.plugin>3.3.1</maven.resources.plugin>
         <!-- output directory -->
         <package.directory>${project.build.directory}/docker-resources</package.directory>
     </properties>
@@ -47,9 +53,8 @@
         </dependency>
     </dependencies>
 
-
     <build>
-        <finalName>selenium-docker</finalName>
+        <finalName>planetaKino-docker</finalName>
         <plugins>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
